--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
 					<ul class="list about-us-list">
 						<li class="about-us-item">
 							<img src="./images/img1.jpg" alt="Десктопные приложения" width="370" class="about-us-img" />
-							<h3 class="title tatle-item">Десктопные приложения</h3>
+							<!-- <h3 class="title tatle-item">Десктопные приложения</h3> -->
 						</li>
 						<li class="about-us-item">
 							<img src="./images/img2.jpg" alt="Мобильные приложения" width="370" class="about-us-img" />
-							<h3 class="title tatle-item">Мобильные приложения</h3>
+							<!-- <h3 class="title tatle-item">Мобильные приложения</h3> -->
 						</li>
 						<li class="about-us-item">
 							<img src="./images/img3.jpg" alt="Дизайнерские решения" width="370" class="about-us-img" />
-							<h3 class="title tatle-item">Дизайнерские решения</h3>
+							<!-- <h3 class="title tatle-item">Дизайнерские решения</h3> -->
 						</li>
 					</ul>
 				</div>
@@ -96,7 +96,7 @@
 					<h2 class="section-title">Наша команда</h2>
 					<ul class="list team-list">
 						<li class="team">
-							<img src="./images/team1.jpg" alt="Фото Николай Кучеренко" width="270" />
+							<img src="./images/team1.jpg" alt="Фото Николай Кучеренко" width="270" class="team-photo"/>
 							<h3 class="title team-title">Игорь Демьяненко</h3>
 							<p lang="en" class="team-position">Product Designer</p>
 							<ul class="list">
@@ -115,7 +115,7 @@
 							</ul>
 						</li>
 						<li class="team">
-							<img src="./images/team2.jpg" alt="Фото Ольга Иванова" width="270" />
+							<img src="./images/team2.jpg" alt="Фото Ольга Иванова" width="270" class="team-photo"/>
 							<h3 class="title team-title">Ольга Репина</h3>
 							<p lang="en" class="team-position">Frontend Developer</p>
 							<ul class="list">
@@ -134,7 +134,7 @@
 							</ul>
 						</li>
 						<li class="team">
-							<img src="./images/team3.jpg" alt="Фото Андрей Шевченко" width="270" />
+							<img src="./images/team3.jpg" alt="Фото Андрей Шевченко" width="270" class="team-photo" />
 							<h3 class="title team-title">Николай Тарасов</h3>
 							<p lang="en" class="team-position">Marketing</p>
 							<ul class="list">
@@ -153,7 +153,7 @@
 							</ul>
 						</li>
 						<li class="team">
-							<img src="./images/team4.jpg" alt="Фото Иван Николаев" width="270" />
+							<img src="./images/team4.jpg" alt="Фото Иван Николаев" width="270" class="team-photo"/>
 							<h3 class="title team-title">Михаил Ермаков</h3>
 							<p lang="en" class="team-position">UI Designer</p>
 							<ul class="list">
