--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			</div>
 		</header>
 		<main>
-			<section class="section hero">
+			<section class="section hero fon">
 				<div class="conteiner">
 					<h1 class="page-title">Эффективные решения для вашего бизнеса</h1>
 					<button class="btn">Заказать услугу</button>
