--- a/index.html
+++ b/index.html
@@ -96,12 +96,14 @@
 					<h2 class="section-title">Наша команда</h2>
 					<ul class="list team-list">
 						<li class="team">
-							<img src="./images/team1.jpg" alt="Фото Николай Кучеренко" width="270" class="team-photo"/>
+							<img src="./images/team1.jpg" alt="Фото Игорь Демьяненко" width="270" class="team-photo"/>
 							<h3 class="title team-title">Игорь Демьяненко</h3>
 							<p lang="en" class="team-position">Product Designer</p>
 							<ul class="list">
 								<li class="icon-list">
-									<a href="./"><img src="./images/instagram.svg" alt="Инстограм" width="20" class="icon" /></a>
+									<a href="https://www.instagram.com/" target="blank" rel="noopener noreferrer" aria-label="ссылка инстаграм" class="icon">
+									  svg.social-icon>use[href="./i"]
+									</a>
 								</li>
 								<li class="icon-list">
 									<a href="./"><img src="./images/twitter.svg" alt="Твиттер" width="20" class="icon" /></a>
