--- a/index.html
+++ b/index.html
@@ -101,12 +101,13 @@
 							<p lang="en" class="team-position">Product Designer</p>
 							<ul class="list">
 								<li class="icon-list">
-									<a href="https://www.instagram.com/" target="blank" rel="noopener noreferrer" aria-label="ссылка инстаграм" class="icon">
-									  svg.social-icon>use[href="./i"]
+									<a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм" class="icon">
+										<svg class="social-icon">
+											<use href="./"></use>
+										</svg>
 									</a>
 								</li>
-								<li class="icon-list">
-									<a href="./"><img src="./images/twitter.svg" alt="Твиттер" width="20" class="icon" /></a>
+								<li class="icon-list">									<a href="./"><img src="./images/icons/twitter.svg" alt="Твиттер" width="20" class="icon" /></a>
 								</li>
 								<li class="icon-list">
 									<a href="./"><img src="./images/facebook.svg" alt="Фейсбук" width="20" class="icon" /></a>
