--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
 					</ul>
 				</nav>
 				<ul class="list adres-list">
-					<li class="adres"><a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a></li>
+					<li class="adres">
+						<a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com>
+						  <svg class="adres-icon">
+						  </svg>
+					    </a>
+					</li>
 					<li class="adres"><a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a></li>
 				</ul>
 			</div>
@@ -107,7 +112,13 @@
 										</svg>
 									</a>
 								</li>
-								<li class="icon-list">									<a href="./"><img src="./images/icons/twitter.svg" alt="Твиттер" width="20" class="icon" /></a>
+								<li class="icon-list">
+									<a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм" class="icon">
+										<svg class="social-icon">
+											<use href="./">
+										</svg>
+							
+									</a>
 								</li>
 								<li class="icon-list">
 									<a href="./"><img src="./images/facebook.svg" alt="Фейсбук" width="20" class="icon" /></a>
