--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 					<li class="adres">
 						<a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com>
 						  <svg class="adres-icon">
+
 						  </svg>
 					    </a>
 					</li>
@@ -104,27 +105,46 @@
 							<img src="./images/team1.jpg" alt="Фото Игорь Демьяненко" width="270" class="team-photo"/>
 							<h3 class="title team-title">Игорь Демьяненко</h3>
 							<p lang="en" class="team-position">Product Designer</p>
-							<ul class="list">
+							<ul class="list social-media">
 								<li class="icon-list">
 									<a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм" class="icon">
 										<svg class="social-icon">
-											<use href="./"></use>
+											<use href="./images/sprite.svg#icon-instagram">
+											   #shadow-root (closed)
+											     <svg id="icon-instagram" viewBox="0 0 32 32"></svg>
+											</use>
 										</svg>
 									</a>
 								</li>
 								<li class="icon-list">
-									<a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм" class="icon">
+									<a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер" class="icon">
 										<svg class="social-icon">
-											<use href="./">
+											<use href="./images/sprite.svg#icon-twitter">
+											   #shadow-root (closed)
+											     <svg id="icon-twitter" viewBox="0 0 32 32"></svg>
+											</use>
 										</svg>
-							
 									</a>
 								</li>
 								<li class="icon-list">
-									<a href="./"><img src="./images/facebook.svg" alt="Фейсбук" width="20" class="icon" /></a>
+									<a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Файсбук" class="icon">
+										<svg class="social-icon">
+											<use href="./images/sprite.svg#icon-facebook">
+											   #shadow-root (closed)
+											     <svg id="icon-facebook" viewBox="0 0 32 32"></svg>
+											</use>
+										</svg>
+									</a>	
 								</li>
 								<li class="icon-list">
-									<a href="./"><img src="./images/linkedin.svg" alt="ЛинкедИн" width="20" class="icon" /></a>
+									<a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкед ЛинкедИн" class="icon">
+										<svg class="social-icon">
+											<use href="./images/sprite.svg#icon-linkedin">
+											   #shadow-root (closed)
+											     <svg id="icon-linkedin" viewBox="0 0 32 32"></svg>
+											</use>
+										</svg>
+									</a>
 								</li>
 							</ul>
 						</li>
@@ -132,18 +152,46 @@
 							<img src="./images/team2.jpg" alt="Фото Ольга Иванова" width="270" class="team-photo"/>
 							<h3 class="title team-title">Ольга Репина</h3>
 							<p lang="en" class="team-position">Frontend Developer</p>
-							<ul class="list">
+							<ul class="list social-media">
 								<li class="icon-list">
-									<a href="./"><img src="./images/instagram.svg" alt="Инстограм" width="20" class="icon" /></a>
+									<a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм" class="icon">
+										<svg class="social-icon">
+											<use href="./images/sprite.svg#icon-instagram">
+											   #shadow-root (closed)
+											     <svg id="icon-instagram" viewBox="0 0 32 32"></svg>
+											</use>
+										</svg>
+									</a>
 								</li>
 								<li class="icon-list">
-									<a href="./"><img src="./images/twitter.svg" alt="Твиттер" width="20" class="icon" /></a>
+									<a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер" class="icon">
+										<svg class="social-icon">
+											<use href="./images/sprite.svg#icon-twitter">
+											   #shadow-root (closed)
+											     <svg id="icon-twitter" viewBox="0 0 32 32"></svg>
+											</use>
+										</svg>
+									</a>
 								</li>
 								<li class="icon-list">
-									<a href="./"><img src="./images/facebook.svg" alt="Фейсбук" width="20" class="icon" /></a>
+									<a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Файсбук" class="icon">
+										<svg class="social-icon">
+											<use href="./images/sprite.svg#icon-facebook">
+											   #shadow-root (closed)
+											     <svg id="icon-facebook" viewBox="0 0 32 32"></svg>
+											</use>
+										</svg>
+									</a>	
 								</li>
 								<li class="icon-list">
-									<a href="./"><img src="./images/linkedin.svg" alt="ЛинкедИн" width="20" class="icon" /></a>
+									<a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкед ЛинкедИн" class="icon">
+										<svg class="social-icon">
+											<use href="./images/sprite.svg#icon-linkedin">
+											   #shadow-root (closed)
+											     <svg id="icon-linkedin" viewBox="0 0 32 32"></svg>
+											</use>
+										</svg>
+									</a>
 								</li>
 							</ul>
 						</li>
@@ -151,18 +199,46 @@
 							<img src="./images/team3.jpg" alt="Фото Андрей Шевченко" width="270" class="team-photo" />
 							<h3 class="title team-title">Николай Тарасов</h3>
 							<p lang="en" class="team-position">Marketing</p>
-							<ul class="list">
+							<ul class="list social-media">
 								<li class="icon-list">
-									<a href="./"><img src="./images/instagram.svg" alt="Инстограм" width="20" class="icon" /></a>
+									<a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм" class="icon">
+										<svg class="social-icon">
+											<use href="./images/sprite.svg#icon-instagram">
+											   #shadow-root (closed)
+											     <svg id="icon-instagram" viewBox="0 0 32 32"></svg>
+											</use>
+										</svg>
+									</a>
 								</li>
 								<li class="icon-list">
-									<a href="./"><img src="./images/twitter.svg" alt="Твиттер" width="20" class="icon" /></a>
+									<a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер" class="icon">
+										<svg class="social-icon">
+											<use href="./images/sprite.svg#icon-twitter">
+											   #shadow-root (closed)
+											     <svg id="icon-twitter" viewBox="0 0 32 32"></svg>
+											</use>
+										</svg>
+									</a>
 								</li>
 								<li class="icon-list">
-									<a href="./"><img src="./images/facebook.svg" alt="Фейсбук" width="20" class="icon" /></a>
+									<a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Файсбук" class="icon">
+										<svg class="social-icon">
+											<use href="./images/sprite.svg#icon-facebook">
+											   #shadow-root (closed)
+											     <svg id="icon-facebook" viewBox="0 0 32 32"></svg>
+											</use>
+										</svg>
+									</a>	
 								</li>
 								<li class="icon-list">
-									<a href="./"><img src="./images/linkedin.svg" alt="ЛинкедИн" width="20" class="icon" /></a>
+									<a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкед ЛинкедИн" class="icon">
+										<svg class="social-icon">
+											<use href="./images/sprite.svg#icon-linkedin">
+											   #shadow-root (closed)
+											     <svg id="icon-linkedin" viewBox="0 0 32 32"></svg>
+											</use>
+										</svg>
+									</a>
 								</li>
 							</ul>
 						</li>
@@ -170,18 +246,46 @@
 							<img src="./images/team4.jpg" alt="Фото Иван Николаев" width="270" class="team-photo"/>
 							<h3 class="title team-title">Михаил Ермаков</h3>
 							<p lang="en" class="team-position">UI Designer</p>
-							<ul class="list">
+							<ul class="list social-media">
 								<li class="icon-list">
-									<a href="./"><img src="./images/instagram.svg" alt="Инстограм" width="20" class="icon" /></a>
+									<a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм" class="icon">
+										<svg class="social-icon">
+											<use href="./images/sprite.svg#icon-instagram">
+											   #shadow-root (closed)
+											     <svg id="icon-instagram" viewBox="0 0 32 32"></svg>
+											</use>
+										</svg>
+									</a>
 								</li>
 								<li class="icon-list">
-									<a href="./"><img src="./images/twitter.svg" alt="Твиттер" width="20" class="icon" /></a>
+									<a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер" class="icon">
+										<svg class="social-icon">
+											<use href="./images/sprite.svg#icon-twitter">
+											   #shadow-root (closed)
+											     <svg id="icon-twitter" viewBox="0 0 32 32"></svg>
+											</use>
+										</svg>
+									</a>
 								</li>
 								<li class="icon-list">
-									<a href="./"><img src="./images/facebook.svg" alt="Фейсбук" width="20" class="icon" /></a>
+									<a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Файсбук" class="icon">
+										<svg class="social-icon">
+											<use href="./images/sprite.svg#icon-facebook">
+											   #shadow-root (closed)
+											     <svg id="icon-facebook" viewBox="0 0 32 32"></svg>
+											</use>
+										</svg>
+									</a>	
 								</li>
 								<li class="icon-list">
-									<a href="./"><img src="./images/linkedin.svg" alt="ЛинкедИн" width="20" class="icon" /></a>
+									<a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкед ЛинкедИн" class="icon">
+										<svg class="social-icon">
+											<use href="./images/sprite.svg#icon-linkedin">
+											   #shadow-root (closed)
+											     <svg id="icon-linkedin" viewBox="0 0 32 32"></svg>
+											</use>
+										</svg>
+									</a>
 								</li>
 							</ul>
 						</li>
@@ -235,17 +339,45 @@
 				<div class="footer-link">
 					<p class="title tatle-item">Присоединяйтесь</p>
 					<ul class="list">
-						<li>
-							<a href="./"><img src="./images/instagram.svg" alt="Инстограм" width="20" class="icon" /></a>
+						<li class="icon-list">
+							<a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм" class="icon">
+								<svg class="social-icon">
+									<use href="./images/sprite.svg#icon-instagram">
+									   #shadow-root (closed)
+										 <svg id="icon-instagram" viewBox="0 0 32 32"></svg>
+									</use>
+								</svg>
+							</a>
 						</li>
-						<li>
-							<a href="./"><img src="./images/twitter.svg" alt="Твиттер" width="20" class="icon" /></a>
+						<li class="icon-list">
+							<a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер" class="icon">
+								<svg class="social-icon">
+									<use href="./images/sprite.svg#icon-twitter">
+									   #shadow-root (closed)
+										 <svg id="icon-twitter" viewBox="0 0 32 32"></svg>
+									</use>
+								</svg>
+							</a>
 						</li>
-						<li>
-							<a href="./"><img src="./images/facebook.svg" alt="Фейсбук" width="20" class="icon" /></a>
+						<li class="icon-list">
+							<a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Файсбук" class="icon">
+								<svg class="social-icon">
+									<use href="./images/sprite.svg#icon-facebook">
+									   #shadow-root (closed)
+										 <svg id="icon-facebook" viewBox="0 0 32 32"></svg>
+									</use>
+								</svg>
+							</a>	
 						</li>
-						<li>
-							<a href="./"><img src="./images/linkedin.svg" alt="ЛинкедИн" width="20" class="icon" /></a>
+						<li class="icon-list">
+							<a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкед ЛинкедИн" class="icon">
+								<svg class="social-icon">
+									<use href="./images/sprite.svg#icon-linkedin">
+									   #shadow-root (closed)
+										 <svg id="icon-linkedin" viewBox="0 0 32 32"></svg>
+									</use>
+								</svg>
+							</a>
 						</li>
 					</ul>
 				</div>
