--- a/index.html
+++ b/index.html
@@ -30,13 +30,27 @@
 				</nav>
 				<ul class="list adres-list">
 					<li class="adres">
-						<a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com>
-						  <svg class="adres-icon">
-
+						<a href="mailto:info@devstudio.com" class="contacts-link" aria-label="написать письмо">
+                          <svg class="sprite-envelope" width="16" ,="" height="12">
+							 <use href="./images/sprite.svg#icon-envelope">
+							    #shadow-root (closed)
+								   <svg id="icon-envelope" viewBox="0 0 43 32"></svg>
+							  </use>
 						  </svg>
+						  mailto:info@devstudio.com
 					    </a>
 					</li>
-					<li class="adres"><a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a></li>
+					<li class="adres">
+						<a href="tel:+380961111111" class="contacts-link" aria-label="позвонить">
+					       <svg class="sprite-smartphone" width="10" ,="" height="16">
+						       <use href="./images/sprite.svg#icon-vector">
+						           #shadow-root (closed)
+							          <svg id="icon-vector" viewBox="0 0 20 32"></svg>
+						       </use>
+						   </svg>
+						   +38 096 111 11 11
+						</a>
+					</li>
 				</ul>
 			</div>
 		</header>
@@ -297,11 +311,21 @@
 					<h2 class="section-title">Постоянные клиенты</h2>
 					<ul class="list">
 						<li class="partner">
-							<a class="partner-item" href="./"><img src="./images/logo1.svg" alt="Я и Ко." width="47" /></a>
-						</li>
+							<a class="partner-item" href="#" target="_blank" rel="noopener noreferrer" aria-label="ссылка на сайт компании">
+							  <svg class="sprite-client" width="44" height="49">
+								<use href="./images/sprite.svg#icon-logo1"></use>
+							  </svg>
+							</a>
+						  </li>
 						<li class="partner">
-							<a class="partner-item" href="./"><img src="./images/logo2.svg" alt="Название компании" width="40" /></a>
-						</li>
+							<a class="partner-item" href="#" target="blank" rel="noopener noreferrer" aria-label="ссылка на сайт компании">
+								<svg class="partner-link" width="44" height="49">
+									<use href="./images/sprite.svg#icon-logo2">
+									  #shadow-root (closed)
+										<svg id="icon-logo2" viewBox="0 0 25 32"></svg>
+									</use>
+								</svg>
+							  </a>						</li>
 						<li class="partner">
 							<a class="partner-item" href="./"><img src="./images/logo3.svg" alt="Название компании" width="41" /></a>
 						</li>
