--- a/index.html
+++ b/index.html
@@ -31,22 +31,16 @@
 				<ul class="list adres-list">
 					<li class="adres">
 						<a href="mailto:info@devstudio.com" class="contacts-link" aria-label="написать письмо">
-                          <svg class="sprite-envelope" width="16" ,="" height="12">
-							 <use href="./images/sprite.svg#icon-envelope">
-							    #shadow-root (closed)
-								   <svg id="icon-envelope" viewBox="0 0 43 32"></svg>
-							  </use>
+                          <svg class="sprite-envelope" width="16" height="12">
+							 <use href="./images/sprite.svg#icon-envelope"></use>
 						  </svg>
 						  mailto:info@devstudio.com
 					    </a>
 					</li>
 					<li class="adres">
 						<a href="tel:+380961111111" class="contacts-link" aria-label="позвонить">
-					       <svg class="sprite-smartphone" width="10" ,="" height="16">
-						       <use href="./images/sprite.svg#icon-vector">
-						           #shadow-root (closed)
-							          <svg id="icon-vector" viewBox="0 0 20 32"></svg>
-						       </use>
+					       <svg class="sprite-smartphone" width="10" height="16">
+						       <use href="./images/sprite.svg#icon-vector"></use>
 						   </svg>
 						   +38 096 111 11 11
 						</a>
@@ -123,40 +117,28 @@
 								<li class="icon-list">
 									<a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-instagram">
-											   #shadow-root (closed)
-											     <svg id="icon-instagram" viewBox="0 0 32 32"></svg>
-											</use>
+											<use href="./images/sprite.svg#icon-instagram"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="icon-list">
 									<a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-twitter">
-											   #shadow-root (closed)
-											     <svg id="icon-twitter" viewBox="0 0 32 32"></svg>
-											</use>
+											<use href="./images/sprite.svg#icon-twitter"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="icon-list">
 									<a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Файсбук" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-facebook">
-											   #shadow-root (closed)
-											     <svg id="icon-facebook" viewBox="0 0 32 32"></svg>
-											</use>
+											<use href="./images/sprite.svg#icon-facebook"></use>
 										</svg>
 									</a>	
 								</li>
 								<li class="icon-list">
 									<a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкед ЛинкедИн" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-linkedin">
-											   #shadow-root (closed)
-											     <svg id="icon-linkedin" viewBox="0 0 32 32"></svg>
-											</use>
+											<use href="./images/sprite.svg#icon-linkedin"></use>
 										</svg>
 									</a>
 								</li>
@@ -170,40 +152,28 @@
 								<li class="icon-list">
 									<a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-instagram">
-											   #shadow-root (closed)
-											     <svg id="icon-instagram" viewBox="0 0 32 32"></svg>
-											</use>
+											<use href="./images/sprite.svg#icon-instagram"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="icon-list">
 									<a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-twitter">
-											   #shadow-root (closed)
-											     <svg id="icon-twitter" viewBox="0 0 32 32"></svg>
-											</use>
+											<use href="./images/sprite.svg#icon-twitter"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="icon-list">
 									<a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Файсбук" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-facebook">
-											   #shadow-root (closed)
-											     <svg id="icon-facebook" viewBox="0 0 32 32"></svg>
-											</use>
+											<use href="./images/sprite.svg#icon-facebook"></use>
 										</svg>
 									</a>	
 								</li>
 								<li class="icon-list">
 									<a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкед ЛинкедИн" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-linkedin">
-											   #shadow-root (closed)
-											     <svg id="icon-linkedin" viewBox="0 0 32 32"></svg>
-											</use>
+											<use href="./images/sprite.svg#icon-linkedin"></use>
 										</svg>
 									</a>
 								</li>
@@ -217,40 +187,28 @@
 								<li class="icon-list">
 									<a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-instagram">
-											   #shadow-root (closed)
-											     <svg id="icon-instagram" viewBox="0 0 32 32"></svg>
-											</use>
+											<use href="./images/sprite.svg#icon-instagram"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="icon-list">
 									<a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-twitter">
-											   #shadow-root (closed)
-											     <svg id="icon-twitter" viewBox="0 0 32 32"></svg>
-											</use>
+											<use href="./images/sprite.svg#icon-twitter"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="icon-list">
 									<a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Файсбук" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-facebook">
-											   #shadow-root (closed)
-											     <svg id="icon-facebook" viewBox="0 0 32 32"></svg>
-											</use>
+											<use href="./images/sprite.svg#icon-facebook"></use>
 										</svg>
 									</a>	
 								</li>
 								<li class="icon-list">
 									<a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкед ЛинкедИн" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-linkedin">
-											   #shadow-root (closed)
-											     <svg id="icon-linkedin" viewBox="0 0 32 32"></svg>
-											</use>
+											<use href="./images/sprite.svg#icon-linkedin"></use>
 										</svg>
 									</a>
 								</li>
@@ -264,40 +222,28 @@
 								<li class="icon-list">
 									<a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-instagram">
-											   #shadow-root (closed)
-											     <svg id="icon-instagram" viewBox="0 0 32 32"></svg>
-											</use>
+											<use href="./images/sprite.svg#icon-instagram"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="icon-list">
 									<a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-twitter">
-											   #shadow-root (closed)
-											     <svg id="icon-twitter" viewBox="0 0 32 32"></svg>
-											</use>
+											<use href="./images/sprite.svg#icon-twitter"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="icon-list">
 									<a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Файсбук" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-facebook">
-											   #shadow-root (closed)
-											     <svg id="icon-facebook" viewBox="0 0 32 32"></svg>
-											</use>
+											<use href="./images/sprite.svg#icon-facebook"></use>
 										</svg>
 									</a>	
 								</li>
 								<li class="icon-list">
 									<a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкед ЛинкедИн" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-linkedin">
-											   #shadow-root (closed)
-											     <svg id="icon-linkedin" viewBox="0 0 32 32"></svg>
-											</use>
+											<use href="./images/sprite.svg#icon-linkedin"></use>
 										</svg>
 									</a>
 								</li>
@@ -312,7 +258,7 @@
 					<ul class="list">
 						<li class="partner">
 							<a class="partner-item" href="#" target="_blank" rel="noopener noreferrer" aria-label="ссылка на сайт компании">
-							  <svg class="sprite-client" width="44" height="49">
+							  <svg class="partner-link" width="44" height="49">
 								<use href="./images/sprite.svg#icon-logo1"></use>
 							  </svg>
 							</a>
@@ -320,23 +266,37 @@
 						<li class="partner">
 							<a class="partner-item" href="#" target="blank" rel="noopener noreferrer" aria-label="ссылка на сайт компании">
 								<svg class="partner-link" width="44" height="49">
-									<use href="./images/sprite.svg#icon-logo2">
-									  #shadow-root (closed)
-										<svg id="icon-logo2" viewBox="0 0 25 32"></svg>
-									</use>
+									<use href="./images/sprite.svg#icon-logo2"></use>
 								</svg>
-							  </a>						</li>
-						<li class="partner">
-							<a class="partner-item" href="./"><img src="./images/logo3.svg" alt="Название компании" width="41" /></a>
+							</a>	
 						</li>
 						<li class="partner">
-							<a class="partner-item" href="./"><img src="./images/logo4.svg" alt="Название компании" width="80" /></a>
+							<a class="partner-item" href="#" target="blank" rel="noopener noreferrer" aria-label="ссылка на сайт компании">
+								<svg class="partner-link" width="44" height="49">
+									<use href="./images/sprite.svg#icon-logo3"></use>
+								</svg>
+							</a>	
 						</li>
 						<li class="partner">
-							<a class="partner-item" href="./"><img src="./images/logo5.svg" alt="Название компании" width="59" /></a>
+							<a class="partner-item" href="#" target="blank" rel="noopener noreferrer" aria-label="ссылка на сайт компании">
+								<svg class="partner-link" width="44" height="49">
+									<use href="./images/sprite.svg#icon-logo4"></use>
+								</svg>
+							</a>	
 						</li>
 						<li class="partner">
-							<a class="partner-item" href="./"><img src="./images/logo6.svg" alt="Название компании" width="89" /></a>
+							<a class="partner-item" href="#" target="blank" rel="noopener noreferrer" aria-label="ссылка на сайт компании">
+								<svg class="partner-link" width="44" height="49">
+									<use href="./images/sprite.svg#icon-logo5"></use>
+								</svg>
+							</a>						
+						</li>
+						<li class="partner">
+							<a class="partner-item" href="#" target="blank" rel="noopener noreferrer" aria-label="ссылка на сайт компании">
+								<svg class="partner-link" width="44" height="49">
+									<use href="./images/sprite.svg#icon-logo6"></use>
+								</svg>
+							</a>				
 						</li>
 					</ul>
 				</div>
@@ -366,40 +326,28 @@
 						<li class="icon-list">
 							<a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм" class="icon">
 								<svg class="social-icon">
-									<use href="./images/sprite.svg#icon-instagram">
-									   #shadow-root (closed)
-										 <svg id="icon-instagram" viewBox="0 0 32 32"></svg>
-									</use>
+									<use href="./images/sprite.svg#icon-instagram"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="icon-list">
 							<a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер" class="icon">
 								<svg class="social-icon">
-									<use href="./images/sprite.svg#icon-twitter">
-									   #shadow-root (closed)
-										 <svg id="icon-twitter" viewBox="0 0 32 32"></svg>
-									</use>
+									<use href="./images/sprite.svg#icon-twitter"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="icon-list">
 							<a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Файсбук" class="icon">
 								<svg class="social-icon">
-									<use href="./images/sprite.svg#icon-facebook">
-									   #shadow-root (closed)
-										 <svg id="icon-facebook" viewBox="0 0 32 32"></svg>
-									</use>
+									<use href="./images/sprite.svg#icon-facebook"></use>
 								</svg>
 							</a>	
 						</li>
 						<li class="icon-list">
 							<a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкед ЛинкедИн" class="icon">
 								<svg class="social-icon">
-									<use href="./images/sprite.svg#icon-linkedin">
-									   #shadow-root (closed)
-										 <svg id="icon-linkedin" viewBox="0 0 32 32"></svg>
-									</use>
+									<use href="./images/sprite.svg#icon-linkedin"></use>
 								</svg>
 							</a>
 						</li>
