--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<li class="adres">
 						<a href="mailto:info@devstudio.com" class="contacts-link" aria-label="написать письмо">
                           <svg class="sprite-envelope" width="16" height="12">
-							 <use href="./images/sprite.svg#icon-envelope"></use>
+							 <use xlink:href="./images/sprite.svg#icon-envelope"></use>
 						  </svg>
 						  mailto:info@devstudio.com
 					    </a>
@@ -40,7 +40,7 @@
 					<li class="adres">
 						<a href="tel:+380961111111" class="contacts-link" aria-label="позвонить">
 					       <svg class="sprite-smartphone" width="10" height="16">
-						       <use href="./images/sprite.svg#icon-vector"></use>
+						       <use xlink:href="./images/sprite.svg#icon-vector"></use>
 						   </svg>
 						   +38 096 111 11 11
 						</a>
@@ -60,27 +60,23 @@
 					<h2 class="section-title visually-hidden">Наши преимущества</h2>
 					<ul class="list">
 						<li class="advantages-item">
-							<img class="advantages-icon" src="./images/antenna.png" alt="" width="70" />
-							<h3 class="title">Внимание к деталям</h3>
+							<h3 class="title antenna">Внимание к деталям</h3>
 							<p class="main-text">Идейные соображения, а также начало повседневной работы по формированию позиции</p>
 						</li>
 						<li class="advantages-item">
-							<img class="advantages-icon" src="./images/clock.png" alt="" width="70" />
-							<h3 class="title">Пунктуальность</h3>
+							<h3 class="title clock">Пунктуальность</h3>
 							<p class="main-text">
 								Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
 							</p>
 						</li>
 						<li class="advantages-item">
-							<img class="advantages-icon" src="./images/diagram.png" alt="" width="70" />
-							<h3 class="title">Планирование</h3>
+							<h3 class="title diagram">Планирование</h3>
 							<p class="main-text">
 								Равным образом консультация с широким активом в значительной степени обуславливает.
 							</p>
 						</li>
 						<li class="advantages-item">
-							<img class="advantages-icon" src="./images/astronaut.png" alt="" width="70" />
-							<h3 class="title">Современные технологии</h3>
+							<h3 class="title astronaut">Современные технологии</h3>
 							<p class="main-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
 						</li>
 					</ul>
@@ -117,28 +113,28 @@
 								<li class="icon-list">
 									<a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-instagram"></use>
+											<use xlink:href="./images/sprite.svg#icon-instagram"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="icon-list">
 									<a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-twitter"></use>
+											<use xlink:href="./images/sprite.svg#icon-twitter"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="icon-list">
 									<a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Файсбук" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-facebook"></use>
+											<use xlink:href="./images/sprite.svg#icon-facebook"></use>
 										</svg>
 									</a>	
 								</li>
 								<li class="icon-list">
 									<a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкед ЛинкедИн" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-linkedin"></use>
+											<use xlink:href="./images/sprite.svg#icon-linkedin"></use>
 										</svg>
 									</a>
 								</li>
@@ -152,28 +148,28 @@
 								<li class="icon-list">
 									<a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-instagram"></use>
+											<use xlink:href="./images/sprite.svg#icon-instagram"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="icon-list">
 									<a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-twitter"></use>
+											<use xlink:href="./images/sprite.svg#icon-twitter"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="icon-list">
 									<a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Файсбук" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-facebook"></use>
+											<use xlink:href="./images/sprite.svg#icon-facebook"></use>
 										</svg>
 									</a>	
 								</li>
 								<li class="icon-list">
 									<a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкед ЛинкедИн" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-linkedin"></use>
+											<use xlink:href="./images/sprite.svg#icon-linkedin"></use>
 										</svg>
 									</a>
 								</li>
@@ -187,28 +183,28 @@
 								<li class="icon-list">
 									<a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-instagram"></use>
+											<use xlink:href="./images/sprite.svg#icon-instagram"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="icon-list">
 									<a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-twitter"></use>
+											<use xlink:href="./images/sprite.svg#icon-twitter"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="icon-list">
 									<a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Файсбук" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-facebook"></use>
+											<use xlink:href="./images/sprite.svg#icon-facebook"></use>
 										</svg>
 									</a>	
 								</li>
 								<li class="icon-list">
 									<a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкед ЛинкедИн" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-linkedin"></use>
+											<use xlink:href="./images/sprite.svg#icon-linkedin"></use>
 										</svg>
 									</a>
 								</li>
@@ -222,28 +218,28 @@
 								<li class="icon-list">
 									<a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-instagram"></use>
+											<use xlink:href="./images/sprite.svg#icon-instagram"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="icon-list">
 									<a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-twitter"></use>
+											<use xlink:href="./images/sprite.svg#icon-twitter"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="icon-list">
 									<a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Файсбук" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-facebook"></use>
+											<use xlink:href="./images/sprite.svg#icon-facebook"></use>
 										</svg>
 									</a>	
 								</li>
 								<li class="icon-list">
 									<a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкед ЛинкедИн" class="icon">
 										<svg class="social-icon">
-											<use href="./images/sprite.svg#icon-linkedin"></use>
+											<use xlink:href="./images/sprite.svg#icon-linkedin"></use>
 										</svg>
 									</a>
 								</li>
@@ -259,42 +255,42 @@
 						<li class="partner">
 							<a class="partner-item" href="#" target="_blank" rel="noopener noreferrer" aria-label="ссылка на сайт компании">
 							  <svg class="partner-link" width="44" height="49">
-								<use href="./images/sprite.svg#icon-logo1"></use>
+								<use xlink:href="./images/sprite.svg#icon-logo1"></use>
 							  </svg>
 							</a>
 						  </li>
 						<li class="partner">
 							<a class="partner-item" href="#" target="blank" rel="noopener noreferrer" aria-label="ссылка на сайт компании">
-								<svg class="partner-link" width="44" height="49">
-									<use href="./images/sprite.svg#icon-logo2"></use>
+								<svg class="partner-link" width="40" height="52">
+									<use xlink:href="./images/sprite.svg#icon-logo2"></use>
 								</svg>
 							</a>	
 						</li>
 						<li class="partner">
 							<a class="partner-item" href="#" target="blank" rel="noopener noreferrer" aria-label="ссылка на сайт компании">
-								<svg class="partner-link" width="44" height="49">
-									<use href="./images/sprite.svg#icon-logo3"></use>
+								<svg class="partner-link" width="41" height="43">
+									<use xlink:href="./images/sprite.svg#icon-logo3"></use>
 								</svg>
 							</a>	
 						</li>
 						<li class="partner">
 							<a class="partner-item" href="#" target="blank" rel="noopener noreferrer" aria-label="ссылка на сайт компании">
-								<svg class="partner-link" width="44" height="49">
-									<use href="./images/sprite.svg#icon-logo4"></use>
+								<svg class="partner-link" width="80" height="43">
+									<use xlink:href="./images/sprite.svg#icon-logo4"></use>
 								</svg>
 							</a>	
 						</li>
 						<li class="partner">
 							<a class="partner-item" href="#" target="blank" rel="noopener noreferrer" aria-label="ссылка на сайт компании">
-								<svg class="partner-link" width="44" height="49">
-									<use href="./images/sprite.svg#icon-logo5"></use>
+								<svg class="partner-link" width="59" height="47">
+									<use xlink:href="./images/sprite.svg#icon-logo5"></use>
 								</svg>
 							</a>						
 						</li>
 						<li class="partner">
 							<a class="partner-item" href="#" target="blank" rel="noopener noreferrer" aria-label="ссылка на сайт компании">
-								<svg class="partner-link" width="44" height="49">
-									<use href="./images/sprite.svg#icon-logo6"></use>
+								<svg class="partner-link" width="89" height="46">
+									<use xlink:href="./images/sprite.svg#icon-logo6"></use>
 								</svg>
 							</a>				
 						</li>
@@ -312,7 +308,7 @@
 						</p>
 					</div>
 					<address>
-						<a href="./" class="contacts-link">г. Киев, пр-т Леси Украинки, 26</a>
+						<a href="./" class="contacts maps">г. Киев, пр-т Леси Украинки, 26</a>
 						<br />
 						<a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a>
 						<br />
@@ -324,28 +320,28 @@
 					<p class="title tatle-item">Присоединяйтесь</p>
 					<ul class="list">
 						<li class="icon-list">
-							<a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм" class="icon">
+							<a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм" class="icon-footer">
 								<svg class="social-icon">
 									<use href="./images/sprite.svg#icon-instagram"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="icon-list">
-							<a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер" class="icon">
+							<a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер" class="icon-footer">
 								<svg class="social-icon">
 									<use href="./images/sprite.svg#icon-twitter"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="icon-list">
-							<a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Файсбук" class="icon">
+							<a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Файсбук" class="icon-footer">
 								<svg class="social-icon">
 									<use href="./images/sprite.svg#icon-facebook"></use>
 								</svg>
 							</a>	
 						</li>
 						<li class="icon-list">
-							<a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкед ЛинкедИн" class="icon">
+							<a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкед ЛинкедИн" class="icon-footer">
 								<svg class="social-icon">
 									<use href="./images/sprite.svg#icon-linkedin"></use>
 								</svg>
