--- a/portfolio.html
+++ b/portfolio.html
@@ -29,8 +29,22 @@
 					</ul>
 				</nav>
 				<ul class="list adres-list">
-					<li class="adres"><a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a></li>
-					<li class="adres"><a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a></li>
+					<li class="adres">
+						<a href="mailto:info@devstudio.com" class="contacts-link" aria-label="написать письмо">
+                          <svg class="sprite-envelope" width="16" height="12">
+							 <use xlink:href="./images/sprite.svg#icon-envelope"></use>
+						  </svg>
+						  mailto:info@devstudio.com
+					    </a>
+					</li>
+					<li class="adres">
+						<a href="tel:+380961111111" class="contacts-link" aria-label="позвонить">
+					       <svg class="sprite-smartphone" width="10" height="16">
+						       <use xlink:href="./images/sprite.svg#icon-vector"></use>
+						   </svg>
+						   +38 096 111 11 11
+						</a>
+					</li>
 				</ul>
 			</div>
 		</header>
@@ -48,100 +62,118 @@
 						<li class="portfolio">
 							<a href="" class="porfolio-item">
 								<img src="./images/img(1).jpg" alt="пример_работы_категории_веб-сайт" />
-								<h3 class="title-portfolio">Технокряк</h3>
-								<p class="portfolio-link">
-									Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
-									цифрового шпионажа и атак на защищённые сервера конкурентов.
-								</p>
-								<p class="category-portfolio">Веб-сайт</p>
+								<div class="portfolio-name">
+									<h3 class="title-portfolio">Технокряк</h3>
+									<!--<p class="portfolio-link">
+										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+										цифрового шпионажа и атак на защищённые сервера конкурентов.
+									</p>-->
+									<p class="category-portfolio">Веб-сайт</p>
+								</div>
 							</a>
 						</li>
 						<li class="portfolio">
 							<a href="" class="porfolio-item">
 								<img src="./images/img(2).jpg" alt="пример_работы_категории_дизайн" />
-								<h3 class="title-portfolio">Постер New Orlean vs Golden Star</h3>
-								<p class="portfolio-link">
-									Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
-									цифрового шпионажа и атак на защищённые сервера конкурентов.
-								</p>
-								<p class="category-portfolio">Дизайн</p>
+								<div class="portfolio-name">
+									<h3 class="title-portfolio">Постер New Orlean vs Golden Star</h3>
+								    <!--<p class="portfolio-link">
+									    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+									    цифрового шпионажа и атак на защищённые сервера конкурентов.
+								    </p>-->
+								    <p class="category-portfolio">Дизайн</p>
+								</div>
 							</a>
 						</li>
 						<li class="portfolio">
 							<a href="" class="porfolio-item">
 								<img src="./images/img(3).jpg" alt="пример_работы_категории_приложение" />
-								<h3 class="title-portfolio">Ресторан Seafood</h3>
-								<p class="portfolio-link">
-									Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
-									цифрового шпионажа и атак на защищённые сервера конкурентов.
-								</p>
-								<p class="category-portfolio">Приложение</p>
+								<div class="portfolio-name">
+									<h3 class="title-portfolio">Ресторан Seafood</h3>
+									<!--<p class="portfolio-link">
+										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+										цифрового шпионажа и атак на защищённые сервера конкурентов.
+									</p>-->
+									<p class="category-portfolio">Приложение</p>
+								</div>
 							</a>
 						</li>
 						<li class="portfolio">
 							<a href="" class="porfolio-item">
 								<img src="./images/img(4).jpg" alt="пример_работы_категории_маркетинг" />
-								<h3 class="title-portfolio">Проект Prime</h3>
-								<p class="portfolio-link">
-									Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
-									цифрового шпионажа и атак на защищённые сервера конкурентов.
-								</p>
-								<p class="category-portfolio">Маркетинг</p>
+								<div class="portfolio-name">
+									<h3 class="title-portfolio">Проект Prime</h3>
+									<!--<p class="portfolio-link">
+										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+										цифрового шпионажа и атак на защищённые сервера конкурентов.
+									</p>-->
+									<p class="category-portfolio">Маркетинг</p>
+								</div>
 							</a>
 						</li>
 						<li class="portfolio">
 							<a href="" class="porfolio-item">
 								<img src="./images/img(5).jpg" alt="пример_работы_категории_приложение" />
-								<h3 class="title-portfolio">Проект Boxes</h3>
-								<p class="portfolio-link">
-									Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
-									цифрового шпионажа и атак на защищённые сервера конкурентов.
-								</p>
-								<p class="category-portfolio">Приложение</p>
+								<div class="portfolio-name">
+									<h3 class="title-portfolio">Проект Boxes</h3>
+									<!--<p class="portfolio-link">
+										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+										цифрового шпионажа и атак на защищённые сервера конкурентов.
+									</p>-->
+									<p class="category-portfolio">Приложение</p>
+								</div>
 							</a>
 						</li>
 						<li class="portfolio">
 							<a href="" class="porfolio-item">
 								<img src="./images/img(6).jpg" alt="пример_работы_категории_веб-сайт" />
-								<h3 class="title-portfolio">Inspiration has no Borders</h3>
-								<p class="portfolio-link">
-									Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
-									цифрового шпионажа и атак на защищённые сервера конкурентов.
-								</p>
-								<p class="category-portfolio">Веб-сайт</p>
+								<div class="portfolio-name">
+									<h3 class="title-portfolio">Inspiration has no Borders</h3>
+									<!--<p class="portfolio-link">
+										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+										цифрового шпионажа и атак на защищённые сервера конкурентов.
+									</p>-->
+									<p class="category-portfolio">Веб-сайт</p>
+								</div>
 							</a>
 						</li>
 						<li class="portfolio">
 							<a href="" class="porfolio-item">
 								<img src="./images/img(7).jpg" alt="пример_работы_категории_дизайн" />
-								<h3 class="title-portfolio">Издание Limited Edition</h3>
-								<p class="portfolio-link">
-									Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
-									цифрового шпионажа и атак на защищённые сервера конкурентов.
-								</p>
-								<p class="category-portfolio">Дизайн</p>
+								<div class="portfolio-name">
+									<h3 class="title-portfolio">Издание Limited Edition</h3>
+									<!--<p class="portfolio-link">
+										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+										цифрового шпионажа и атак на защищённые сервера конкурентов.
+									</p>-->
+									<p class="category-portfolio">Дизайн</p>
+								</div>
 							</a>
 						</li>
 						<li class="portfolio">
 							<a href="" class="porfolio-item">
 								<img src="./images/img(8).jpg" alt="пример_работы_категории_маркетинг" />
-								<h3 class="title-portfolio">Проект LAB</h3>
-								<p class="portfolio-link">
-									Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
-									цифрового шпионажа и атак на защищённые сервера конкурентов.
-								</p>
-								<p class="category-portfolio">Маркетинг</p>
+								<div class="portfolio-name">
+									<h3 class="title-portfolio">Проект LAB</h3>
+								    <!--<p class="portfolio-link">
+									    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+									    цифрового шпионажа и атак на защищённые сервера конкурентов.
+								    </p>-->
+								    <p class="category-portfolio">Маркетинг</p>
+								</div>
 							</a>
 						</li>
 						<li class="portfolio">
 							<a href="" class="porfolio-item">
 								<img src="./images/img(9).jpg" alt="пример_работы_категории_приложение" />
-								<h3 class="title-portfolio">Growing Business</h3>
-								<p class="portfolio-link">
-									Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
-									цифрового шпионажа и атак на защищённые сервера конкурентов.
-								</p>
-								<p class="category-portfolio">Приложение</p>
+								<div class="portfolio-name">
+									<h3 class="title-portfolio">Growing Business</h3>
+									<!--<p class="portfolio-link">
+										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+										цифрового шпионажа и атак на защищённые сервера конкурентов.
+									</p>-->
+									<p class="category-portfolio">Приложение</p>
+								</div>
 							</a>
 						</li>
 					</ul>
@@ -158,7 +190,7 @@
 						</p>
 					</div>
 					<address>
-						<a href="./" class="contacts-link">г. Киев, пр-т Леси Украинки, 26</a>
+						<a href="./" class="contacts maps">г. Киев, пр-т Леси Украинки, 26</a>
 						<br />
 						<a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a>
 						<br />
@@ -169,17 +201,33 @@
 				<div class="footer-link">
 					<p class="title tatle-item">Присоединяйтесь</p>
 					<ul class="list">
-						<li>
-							<a href="./"><img src="./images/instagram.svg" alt="Инстограм" width="20" class="icon" /></a>
+						<li class="icon-list">
+							<a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм" class="icon-footer">
+								<svg class="social-icon">
+									<use href="./images/sprite.svg#icon-instagram"></use>
+								</svg>
+							</a>
 						</li>
-						<li>
-							<a href="./"><img src="./images/twitter.svg" alt="Твиттер" width="20" class="icon" /></a>
+						<li class="icon-list">
+							<a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер" class="icon-footer">
+								<svg class="social-icon">
+									<use href="./images/sprite.svg#icon-twitter"></use>
+								</svg>
+							</a>
 						</li>
-						<li>
-							<a href="./"><img src="./images/facebook.svg" alt="Фейсбук" width="20" class="icon" /></a>
+						<li class="icon-list">
+							<a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Файсбук" class="icon-footer">
+								<svg class="social-icon">
+									<use href="./images/sprite.svg#icon-facebook"></use>
+								</svg>
+							</a>	
 						</li>
-						<li>
-							<a href="./"><img src="./images/linkedin.svg" alt="ЛинкедИн" width="20" class="icon" /></a>
+						<li class="icon-list">
+							<a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкед ЛинкедИн" class="icon-footer">
+								<svg class="social-icon">
+									<use href="./images/sprite.svg#icon-linkedin"></use>
+								</svg>
+							</a>
 						</li>
 					</ul>
 				</div>
