--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
                           <svg class="sprite-envelope" width="16" height="12">
 							 <use xlink:href="./images/sprite.svg#icon-envelope"></use>
 						  </svg>
-						  mailto:info@devstudio.com
+						  info@devstudio.com
 					    </a>
 					</li>
 					<li class="adres">
